--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         }
     }
 
-    dynamicFeatures = [":music", ":weather"]
+    dynamicFeatures = [":music", ":weather", ":news"]
 
 }
 
