Introducing Movies Module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         }
     }
 
-    dynamicFeatures = [":music", ":weather", ":news"]
+    dynamicFeatures = [":music", ":weather", ":news", ":movies"]
 
 }
 
