--- a/music/src/main/AndroidManifest.xml
+++ b/music/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     </dist:module>
 
     <application>
-        <activity android:name=".MusicActivity"></activity>
+        <activity android:name=".ui.views.MusicActivity"></activity>
     </application>
 
 </manifest>
