--- a/weather/src/main/AndroidManifest.xml
+++ b/weather/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     </dist:module>
 
     <application>
-        <activity android:name=".WeatherrActivity"></activity>
+        <activity android:name=".ui.views.WeatherrActivity"></activity>
     </application>
 
 </manifest>
