--- a/music/src/main/AndroidManifest.xml
+++ b/music/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
     </dist:module>
 
     <application>
-        <activity android:name=".ui.views.MusicActivity"></activity>
+        <activity android:name=".ui.views.MusicActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
