--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
     </dist:module>
 
     <application>
-        <activity android:name=".ui.views.NewsActivity"></activity>
+        <activity android:name=".ui.views.NewsActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
