--- a/weather/build.gradle
+++ b/weather/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
 
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
@@ -13,11 +12,11 @@ android {
         versionName "1.0"
 
     }
-
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':app')
+
+    implementation project(path: ':core')
 }
