--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -1,11 +1,24 @@
 // This file contains all the dependencies shared across the modules, to ease setup and management
 dependencies {
-// androidX and Material
+
+    // androidX and Material
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    // Android Jetpack
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+
+    // Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.0.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
 
     // Logging - debug builds
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -15,4 +28,8 @@ dependencies {
     // Images
     implementation 'io.coil-kt:coil:0.7.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    // DI
+    implementation 'org.koin:koin-android:2.0.0-beta-1'
+    implementation 'org.koin:koin-androidx-viewmodel:2.0.0-beta-1'
 }
