--- a/movies/build.gradle
+++ b/movies/build.gradle
@@ -14,6 +14,10 @@ android {
         versionName "1.0"
 
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
