Adding Room and Paging - KOIN setup

--- a/movies/build.gradle
+++ b/movies/build.gradle
@@ -35,5 +35,8 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
 
+    // Paging
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.0-rc01'
+
     implementation project(path: ':core')
 }
