--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", 'openMapApiKey', openMapApiKey
+        }
+        debug{
+            buildConfigField "String", 'openMapApiKey', openMapApiKey
         }
     }
     compileOptions {
