finalized on offline functionality

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 openMapApiKey = "7d4c9b0809c9d70cace6bc5cc75b415b"
+kapt.incremental.apt=true
