--- a/movies/build.gradle
+++ b/movies/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     implementation project(':app')
 
     // Room db
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    kapt 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'androidx.room:room-runtime:2.2.0'
+    kapt 'androidx.room:room-compiler:2.2.0'
+    implementation 'androidx.room:room-ktx:2.2.0'
 
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:2.1.0-rc01'
