--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    androidExtensions {
+        experimental = true
+    }
 
     dynamicFeatures = [":music", ":weather", ":news", ":movies"]
 }
